AND IT WAS A REI BUG DING DING